--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
 }
 header {
 
-   background-color: #4CAF50;
-   color: blue;
+   background-color: #000000;
+   color: white;
    padding: 20px;
    text-align: center;
 }
@@ -24,7 +24,7 @@ header {
 }
 
 nav a {
-   color: red;
+   color: white;
    text-decoration: none;
    margin: 0 10px
 }
