--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ selector {
 }
 body {
     font-family: Arial.sans-serif
-    color:#333
+    color:#D3D3D3
     background-color:#f9f9f9
     margin:0
     padding:0
